# todo-api-django

./: .gitignore  .pre-commit-config.yaml  README.md  insomnia.json  pyproject.toml  requirements.txt
setup/: settings.py  urls.py
todo/: admin.py  models.py  serializers.py  views.py
todo/migrations/: 0001_initial.py  0002_remove_task_color.py
