[tool.poetry]
name = "todo-api-django"
version = "1.0.0"
description = "A ToDo API created in Python and Django Rest Framework for case study."
authors = ["Bruno Santos <bruno.dos1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.5.2"
astroid = "2.11.6"
dill = "0.3.5.1"
Django = "4.0.5"
djangorestframework = "3.13.1"
isort = "5.10.1"
lazy-object-proxy = "1.7.1"
mccabe = "0.7.0"
platformdirs = "2.5.2"
pylint = "2.14.2"
pytz = "2022.1"
six = "1.16.0"
sqlparse = "0.4.2"
toml = "0.10.2"
tomli = "2.0.1"
tomlkit = "0.11.0"
typed-ast = "1.5.4"
wrapt = "1.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
